--- a/htmlCssJavascript/html/balnkAllDemo.html
+++ b/htmlCssJavascript/html/balnkAllDemo.html
@@ -11,5 +11,7 @@
     </body>
     <!-- <script src="../js/binary_tree.js"></script> -->
     <!-- <script src="../js/JavaScript.js"></script> -->
-    <script src="../js/20200901_dataStructure.js"></script>
+    <!-- <script src="../js/20200901_dataStructure.js"></script> -->
+    <!-- <script src="../js/20200910_promise.js"></script> -->
+    <script src="../js/20200914_changeThis.js"></script>
 </html>
