--- a/htmlCssJavascript/html/balnkAllDemo.html
+++ b/htmlCssJavascript/html/balnkAllDemo.html
@@ -13,5 +13,6 @@
     <!-- <script src="../js/JavaScript.js"></script> -->
     <!-- <script src="../js/20200901_dataStructure.js"></script> -->
     <!-- <script src="../js/20200910_promise.js"></script> -->
-    <script src="../js/20200914_changeThis.js"></script>
+    <!-- <script src="../js/20200914_changeThis.js"></script> -->
+    <script src="../js/20200915_functionPrototype.js"></script>
 </html>
