--- a/htmlCssJavascript/html/20200903_flexDemo.html
+++ b/htmlCssJavascript/html/20200903_flexDemo.html
@@ -30,12 +30,12 @@
                 flex
                 align-self -->
 
-    <!-- 水平垂直居中 -->
+    <!-- 0：水平垂直居中 -->
     <!-- <div class="box">
         <div class="content">我是子元素，我要垂直居中</div>
     </div> -->
 
-    <!-- 两三栏布局 -->
+    <!-- 1：两三栏布局 -->
     <!-- <div class="box">
         <div class="left">left</div>
         <div class="main">main</div>
@@ -46,7 +46,7 @@
         <div class="right">right</div>
     </div> -->
 
-    <!-- 等分宽高 -->
+    <!-- 2：等分宽高 -->
     <!-- <nav>
         <a href="#">苟</a>
         <a href="#">利</a>
@@ -57,7 +57,7 @@
         <a href="#">以</a>
     </nav> -->
 
-    <!-- 圣杯布局 -->
+    <!-- 3：圣杯布局 -->
     <!-- 固定底栏 -->
     <div class="box">
         <header>header</header>
@@ -69,7 +69,7 @@
         <footer>footer</footer>
     </div>
 
-    <!-- 流式布局 -->
+    <!-- 4：流式布局 -->
     <!-- <h1>10个</h1>
     <div class="box">
         <div class="content"></div>
@@ -84,7 +84,7 @@
         <div class="content"></div>
     </div> -->
 
-    <!-- 结合响应式布局综合运用 -->
+    <!-- 5：结合响应式布局综合运用 -->
     <!-- <div class="box">
         <div class="box1"></div>
         <div class="box2"></div>
