fix: JS原型和继承

--- a/htmlCssJavascript/html/balnkAllDemo.html
+++ b/htmlCssJavascript/html/balnkAllDemo.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>call,apply,bind,new demo</title>
+        <title>JS原型及继承</title>
         <!-- <link rel="stylesheet" href="../css/canvasCss.css"> -->
     </head>
     <body>
@@ -14,6 +14,6 @@
     <!-- <script src="../js/20200901_dataStructure.js"></script> -->
     <!-- <script src="../js/20200910_promise.js"></script> -->
     <!-- <script src="../js/20200914_changeThis.js"></script> -->
-    <!-- <script src="../js/20200915_functionPrototype.js"></script> -->
-    <script src="../js/20200916_event.js"></script>
+    <script src="../js/20200915_functionPrototype.js"></script>
+    <!-- <script src="../js/20200916_event.js"></script> -->
 </html>
